--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.14.5",
   "private": true,
   "scripts": {
-    "postinstall": "patch-package && ./node_modules/.bin/rn-nodeify --hack --install && npx jetify",
+    "postinstall": "patch-package && rn-nodeify --hack --install && npx jetify",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
@@ -82,12 +82,12 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-clipboard/clipboard": "^1.16.0",
     "@react-native-community/checkbox": "^0.5.20",
-    "@react-native-community/hooks": "^100.1.0",
-    "@react-native-community/netinfo": "^11.3.3",
+    "@react-native-community/hooks": "2.8.1",
+    "@react-native-community/netinfo": "9.3.7",
     "@react-native-community/slider": "4.5.6",
     "@react-navigation/bottom-tabs": "6.4.0",
     "@react-navigation/material-top-tabs": "6.5.1",
-    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native": "6.0.11",
     "@react-navigation/native-stack": "6.7.0",
     "@react-navigation/stack": "^6.3.21",
     "@reduxjs/toolkit": "^2.6.1",
@@ -111,21 +111,20 @@
     "@walletconnect/types": "2.2.1",
     "angry-purple-tiger": "1.0.5",
     "assert": "1.5.0",
-    "axios": "1.8.2",
+    "axios": "1.11.0",
     "axios-mock-adapter": "1.22.0",
     "base-64": "1.0.0",
     "bcrypt-react-native": "1.1.1",
     "bignumber.js": "9.1.1",
     "bip39": "3.1.0",
     "bn.js": "5.2.1",
-    "browserify-zlib": "0.1.4",
+    "browserify-zlib": "^0.2.0",
     "bs58": "5.0.0",
     "buffer": "6.0.3",
     "camelcase-keys": "7.0.2",
     "compare-versions": "6.1.0",
     "console-browserify": "1.2.0",
     "constants-browserify": "1.0.0",
-    "crypto": "1.0.1",
     "date-fns": "2.29.2",
     "deprecated-react-native-prop-types": "2.3.0",
     "dns.js": "1.0.1",
@@ -154,6 +153,7 @@
     "lottie-react-native": "7.2.2",
     "markdown-it": "13.0.2",
     "metro-react-native-babel-transformer": "0.77.0",
+    "pako": "^2.1.0",
     "parse5": "6.0.1",
     "patch-package": "8.0.0",
     "path-browserify": "0.0.0",
@@ -161,7 +161,7 @@
     "qs": "6.11.0",
     "query-string": "7.1.1",
     "querystring-es3": "0.2.1",
-    "react": "19.1.0",
+    "react": "19.0.0",
     "react-async-hook": "4.0.0",
     "react-error-boundary": "4.0.13",
     "react-i18next": "11.18.4",
@@ -173,8 +173,8 @@
     "react-native-crypto": "2.2.0",
     "react-native-device-info": "8.7.1",
     "react-native-flash-message": "0.2.1",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-get-random-values": "~1.11.0",
+    "react-native-gesture-handler": "2.27.1",
+    "react-native-get-random-values": "1.11.0",
     "react-native-icloudstore": "0.9.0",
     "react-native-jazzicon": "0.1.2",
     "react-native-keyboard-aware-scroll-view": "0.9.5",
@@ -187,13 +187,13 @@
     "react-native-network-info": "5.2.1",
     "react-native-onesignal": "5.2.9",
     "react-native-os": "1.2.6",
-    "react-native-pager-view": "6.7.1",
+    "react-native-pager-view": "6.8.1",
     "react-native-permissions": "5.3.0",
     "react-native-qrcode-svg": "6.1.2",
     "react-native-randombytes": "3.6.1",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
+    "react-native-reanimated": "3.18.0",
+    "react-native-safe-area-context": "5.5.2",
+    "react-native-screens": "4.13.0",
     "react-native-share": "7.9.0",
     "react-native-shared-group-preferences": "1.1.24",
     "react-native-simple-toast": "1.1.4",
@@ -207,9 +207,10 @@
     "react-native-url-polyfill": "2.0.0",
     "react-native-video": "6.12.0",
     "react-native-webview": "13.13.5",
-    "react-redux": "^9.2.0",
+    "react-redux": "8.0.4",
     "readable-stream": "3.6.0",
     "redux-persist": "^6.0.0",
+    "rn-nodeify": "^10.3.0",
     "rn-swipe-button": "1.3.8",
     "rxjs": "7.5.6",
     "semver": "7.3.8",
@@ -233,10 +234,10 @@
     "@react-native-community/cli": "^19.0.0",
     "@react-native-community/cli-platform-android": "^19.0.0",
     "@react-native-community/cli-platform-ios": "^19.0.0",
-    "@react-native/babel-preset": "^0.80.0",
-    "@react-native/eslint-config": "0.80.0",
-    "@react-native/metro-config": "^0.80.0",
-    "@react-native/typescript-config": "0.80.0",
+    "@react-native/babel-preset": "^0.79.5",
+    "@react-native/eslint-config": "0.79.5",
+    "@react-native/metro-config": "^0.79.5",
+    "@react-native/typescript-config": "0.79.5",
     "@types/bn.js": "5.1.1",
     "@types/debounce": "1.2.4",
     "@types/i18n-js": "3.8.2",
@@ -280,8 +281,7 @@
     "react-test-renderer": "19.1.0",
     "reactotron-react-native": "5.1.14",
     "reactotron-redux": "3.2.0",
-    "rn-nodeify": "10.3.0",
-    "typescript": "~5.8.3"
+    "typescript": "5.8.3"
   },
   "resolutions": {
     "@types/react": "19",
@@ -296,10 +296,10 @@
     "@helium/onboarding": "^5.0.1"
   },
   "react-native": {
+    "crypto": "react-native-crypto",
     "zlib": "browserify-zlib",
     "console": "console-browserify",
     "constants": "constants-browserify",
-    "crypto": "react-native-crypto",
     "dns": "dns.js",
     "net": "react-native-tcp",
     "domain": "domain-browser",
@@ -318,8 +318,8 @@
     "timers": "timers-browserify",
     "tty": "tty-browserify",
     "vm": "vm-browserify",
-    "tls": false,
-    "os": "react-native-os"
+    "os": "react-native-os",
+    "tls": false
   },
   "browser": {
     "_stream_duplex": "readable-stream/duplex",
@@ -347,5 +347,5 @@
     "vm": "vm-browserify",
     "zlib": "browserify-zlib"
   },
-  "packageManager": "yarn@1.22.21+sha1.1959a18351b811cdeedbd484a8f86c3cc3bbaf72"
+  "packageManager": "yarn@4.4.1"
 }
