--- a/tsconfig.json
+++ b/tsconfig.json
@@ -57,5 +57,5 @@
     "metro.config.js",
     "jest.config.js"
   ],
-  "extends": "@react-native/typescript-config"
+  "extends": "@react-native/typescript-config/tsconfig.json
 }
