--- a/package.json
+++ b/package.json
@@ -173,7 +173,7 @@
     "react-native-crypto": "2.2.0",
     "react-native-device-info": "8.7.1",
     "react-native-flash-message": "0.2.1",
-    "react-native-gesture-handler": "2.27.1",
+    "react-native-gesture-handler": "^2.27.2",
     "react-native-get-random-values": "1.11.0",
     "react-native-icloudstore": "0.9.0",
     "react-native-jazzicon": "0.1.2",
@@ -247,12 +247,12 @@
     "@types/markdown-it": "13.0.5",
     "@types/parse5": "5.0.3",
     "@types/qs": "6.9.7",
-    "@types/react": "~19.0.10",
+    "@types/react": "^19.0.0",
     "@types/react-native-charts-wrapper": "0.5.2",
     "@types/react-native-shared-group-preferences": "1.1.1",
     "@types/react-native-snap-carousel": "3.8.5",
     "@types/react-native-video": "5.0.14",
-    "@types/react-test-renderer": "^19.1.0",
+    "@types/react-test-renderer": "^19.0.0",
     "@types/semver": "7.3.12",
     "@types/tinycolor2": "1.4.3",
     "@typescript-eslint/eslint-plugin": "5.59.2",
@@ -278,7 +278,7 @@
     "react-native-cli-bump-version": "1.5.0",
     "react-native-codegen": "0.0.7",
     "react-native-svg-transformer": "0.14.3",
-    "react-test-renderer": "19.1.0",
+    "react-test-renderer": "19.0.0",
     "reactotron-react-native": "5.1.14",
     "reactotron-redux": "3.2.0",
     "typescript": "5.8.3"
@@ -347,5 +347,5 @@
     "vm": "vm-browserify",
     "zlib": "browserify-zlib"
   },
-  "packageManager": "yarn@4.4.1"
+  "packageManager": "yarn@4.9.2"
 }
