--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "clean-start": "yarn start -- --reset-cache",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx && tsc",
     "android-clean": "cd android && ./gradlew clean && cd ..",
     "ios-clean": "rm -rf ios/Pods && rm -rf ios/build",
     "pod-install": "bundle install && cd ios && RCT_NEW_ARCH_ENABLED=1 bundle exec pod install --repo-update",
-    "clean-install": "react-native-clean-project",
+    "clean-start": "yarn start -- --reset-cache",
+    "clean": "react-native-clean-project",
     "bump-patch": "npx react-native bump-version --skip-semver-for android --skip-code-for all --type patch",
     "bump-minor": "npx react-native bump-version --skip-semver-for android --skip-code-for all --type minor",
     "bump-major": "npx react-native bump-version --skip-semver-for android --skip-code-for all --type major",
@@ -79,7 +79,7 @@
     "@noble/ed25519": "^2.3.0",
     "@noble/hashes": "^1.8.0",
     "@onsol/tldparser": "0.5.3",
-    "@react-native-async-storage/async-storage": "1.18.1",
+    "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-community/checkbox": "0.5.17",
     "@react-native-community/clipboard": "1.5.1",
     "@react-native-community/hooks": "2.8.1",
@@ -111,7 +111,7 @@
     "@walletconnect/types": "2.2.1",
     "angry-purple-tiger": "1.0.5",
     "assert": "1.5.0",
-    "axios": "1.8.2",
+    "axios": "^1.8.2",
     "axios-mock-adapter": "1.22.0",
     "base-64": "1.0.0",
     "bcrypt-react-native": "1.1.1",
@@ -132,17 +132,17 @@
     "domain-browser": "1.2.0",
     "ed25519-hd-key": "1.3.0",
     "events": "3.3.0",
-    "expo": "52.0.44",
-    "expo-asset": "10.0.10",
-    "expo-blur": "14.0.3",
-    "expo-camera": "16.0.18",
-    "expo-constants": "17.0.6",
-    "expo-haptics": "13.0.1",
-    "expo-linking": "7.0.5",
-    "expo-local-authentication": "14.0.1",
-    "expo-modules-core": "2.2.3",
-    "expo-secure-store": "13.0.2",
-    "expo-splash-screen": "0.27.5",
+    "expo": "53.0.20",
+    "expo-asset": "11.1.7",
+    "expo-blur": "~14.1.5",
+    "expo-camera": "~16.1.10",
+    "expo-constants": "~17.1.7",
+    "expo-haptics": "~14.1.4",
+    "expo-linking": "~7.1.7",
+    "expo-local-authentication": "~16.0.5",
+    "expo-modules-core": "~2.5.0",
+    "expo-secure-store": "~14.2.3",
+    "expo-splash-screen": "~0.30.10",
     "fuse.js": "6.6.2",
     "h3-js": "4.1.0",
     "https-browserify": "0.0.1",
@@ -160,11 +160,11 @@
     "qs": "6.11.0",
     "query-string": "7.1.1",
     "querystring-es3": "0.2.1",
-    "react": "18.3.1",
+    "react": "19.0.0",
     "react-async-hook": "4.0.0",
     "react-error-boundary": "4.0.13",
     "react-i18next": "11.18.4",
-    "react-native": "0.77.2",
+    "react-native": "0.79.5",
     "react-native-appstate-hook": "1.0.6",
     "react-native-ble-plx": "3.4.0",
     "react-native-charts-wrapper": "0.5.10",
@@ -172,7 +172,7 @@
     "react-native-crypto": "2.2.0",
     "react-native-device-info": "8.7.1",
     "react-native-flash-message": "0.2.1",
-    "react-native-gesture-handler": "2.24.0",
+    "react-native-gesture-handler": "^2.27.1",
     "react-native-get-random-values": "1.8.0",
     "react-native-icloudstore": "0.9.0",
     "react-native-jazzicon": "0.1.2",
@@ -186,18 +186,18 @@
     "react-native-network-info": "5.2.1",
     "react-native-onesignal": "5.2.9",
     "react-native-os": "1.2.6",
-    "react-native-pager-view": "6.7.0",
+    "react-native-pager-view": "^6.8.1",
     "react-native-permissions": "5.3.0",
     "react-native-qrcode-svg": "6.1.2",
     "react-native-randombytes": "3.6.1",
-    "react-native-reanimated": "3.17.5",
-    "react-native-safe-area-context": "5.3.0",
-    "react-native-screens": "4.10.0",
+    "react-native-reanimated": "^3.18.0",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-screens": "^4.13.0",
     "react-native-share": "7.9.0",
     "react-native-shared-group-preferences": "1.1.24",
     "react-native-simple-toast": "1.1.4",
     "react-native-snap-carousel": "4.0.0-beta.6",
-    "react-native-svg": "15.11.2",
+    "react-native-svg": "^15.12.0",
     "react-native-tab-view": "3.3.4",
     "react-native-tcp": "3.3.2",
     "react-native-test-flight": "1.1.0",
@@ -205,7 +205,7 @@
     "react-native-udp": "2.7.0",
     "react-native-url-polyfill": "2.0.0",
     "react-native-video": "6.12.0",
-    "react-native-webview": "13.13.5",
+    "react-native-webview": "13.13.0",
     "react-redux": "8.0.4",
     "readable-stream": "3.6.0",
     "redux-persist": "6.0.0",
@@ -229,13 +229,13 @@
     "@babel/preset-env": "7.26.9",
     "@babel/runtime": "7.26.10",
     "@ledgerhq/hw-transport-mocker": "6.29.8",
-    "@react-native-community/cli": "15.0.1",
-    "@react-native-community/cli-platform-android": "15.0.1",
-    "@react-native-community/cli-platform-ios": "15.0.1",
-    "@react-native/babel-preset": "0.77.2",
-    "@react-native/eslint-config": "0.77.2",
-    "@react-native/metro-config": "0.77.2",
-    "@react-native/typescript-config": "0.77.2",
+    "@react-native-community/cli": "18.0.0",
+    "@react-native-community/cli-platform-android": "18.0.0",
+    "@react-native-community/cli-platform-ios": "18.0.0",
+    "@react-native/babel-preset": "0.79.5",
+    "@react-native/eslint-config": "0.79.5",
+    "@react-native/metro-config": "0.79.5",
+    "@react-native/typescript-config": "0.79.5",
     "@types/bn.js": "5.1.1",
     "@types/debounce": "1.2.4",
     "@types/i18n-js": "3.8.2",
@@ -245,13 +245,13 @@
     "@types/markdown-it": "13.0.5",
     "@types/parse5": "5.0.3",
     "@types/qs": "6.9.7",
-    "@types/react": "18.3.3",
-    "@types/react-native": "0.70.6",
+    "@types/react": "^19.0.0",
+    "@types/react-native": "0.79.5",
     "@types/react-native-charts-wrapper": "0.5.2",
     "@types/react-native-shared-group-preferences": "1.1.1",
     "@types/react-native-snap-carousel": "3.8.5",
     "@types/react-native-video": "5.0.14",
-    "@types/react-test-renderer": "19.1.0",
+    "@types/react-test-renderer": "^19.0.0",
     "@types/semver": "7.3.12",
     "@types/tinycolor2": "1.4.3",
     "@typescript-eslint/eslint-plugin": "5.59.2",
@@ -277,15 +277,15 @@
     "react-native-cli-bump-version": "1.5.0",
     "react-native-codegen": "0.0.7",
     "react-native-svg-transformer": "0.14.3",
-    "react-test-renderer": "18.3.1",
+    "react-test-renderer": "19.0.0",
     "reactotron-react-native": "5.0.3",
     "reactotron-redux": "3.1.3",
     "rn-nodeify": "10.3.0",
     "typescript": "5.0.4"
   },
   "resolutions": {
-    "@types/react": "18",
-    "react": "18.3.1",
+    "@types/react": "^19.0.0",
+    "react": "19.0.0",
     "@solana/wallet-adapter-react": "0.15.33",
     "@helium/account-fetch-cache": "0.10.33",
     "@helium/account-fetch-cache-hooks": "0.10.33",
