--- a/package.json
+++ b/package.json
@@ -133,7 +133,7 @@
     "ed25519-hd-key": "1.3.0",
     "events": "3.3.0",
     "expo": "53.0.20",
-    "expo-asset": "11.1.7",
+    "expo-asset": "10.0.10",
     "expo-blur": "~14.1.5",
     "expo-camera": "~16.1.10",
     "expo-constants": "~17.1.7",
@@ -142,7 +142,7 @@
     "expo-local-authentication": "~16.0.5",
     "expo-modules-core": "~2.5.0",
     "expo-secure-store": "~14.2.3",
-    "expo-splash-screen": "~0.30.10",
+    "expo-splash-screen": "0.27.5",
     "fuse.js": "6.6.2",
     "h3-js": "4.1.0",
     "https-browserify": "0.0.1",
@@ -246,7 +246,6 @@
     "@types/parse5": "5.0.3",
     "@types/qs": "6.9.7",
     "@types/react": "^19.0.0",
-    "@types/react-native": "0.79.5",
     "@types/react-native-charts-wrapper": "0.5.2",
     "@types/react-native-shared-group-preferences": "1.1.1",
     "@types/react-native-snap-carousel": "3.8.5",
@@ -278,8 +277,8 @@
     "react-native-codegen": "0.0.7",
     "react-native-svg-transformer": "0.14.3",
     "react-test-renderer": "19.0.0",
-    "reactotron-react-native": "5.0.3",
-    "reactotron-redux": "3.1.3",
+    "reactotron-react-native": "^5.1.3",
+    "reactotron-redux": "^3.1.9",
     "rn-nodeify": "10.3.0",
     "typescript": "5.0.4"
   },
