--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,37 +1,41 @@
 pluginManagement {
-    def reactNativeGradlePlugin = new File(
-            providers.exec {
-                workingDir(rootDir)
-                commandLine("node", "--print", "require.resolve('@react-native/gradle-plugin/package.json', { paths: [require.resolve('react-native/package.json')] })")
-            }.standardOutput.asText.get().trim()
-    ).getParentFile().absolutePath
-    includeBuild(reactNativeGradlePlugin)
-
-    def expoPluginsPath = new File(
-            providers.exec {
-                workingDir(rootDir)
-                commandLine("node", "--print", "require.resolve('expo-modules-autolinking/package.json', { paths: [require.resolve('expo/package.json')] })")
-            }.standardOutput.asText.get().trim(),
-            "../android/expo-gradle-plugin"
-    ).absolutePath
-    includeBuild(expoPluginsPath)
+  repositories {
+    maven { url "https://plugins.gradle.org/m2/" }
+  }
+  includeBuild("../node_modules/@react-native/gradle-plugin")
 }
-
-plugins {
-    id("com.facebook.react.settings")
-    id("expo-autolinking-settings")
-}
+plugins { id("com.facebook.react.settings") }
 
 extensions.configure(com.facebook.react.ReactSettingsExtension) { ex ->
-    if (System.getenv('EXPO_USE_COMMUNITY_AUTOLINKING') == '1') {
-        ex.autolinkLibrariesFromCommand()
-    } else {
-        ex.autolinkLibrariesFromCommand(expoAutolinking.rnConfigCommand)
-    }
+  if (System.getenv('EXPO_USE_COMMUNITY_AUTOLINKING') == '1') {
+    ex.autolinkLibrariesFromCommand()
+  } else {
+    def command = [
+      'node',
+      '--no-warnings',
+      '--eval',
+      'require(require.resolve(\'expo-modules-autolinking\', { paths: [require.resolve(\'expo/package.json\')] }))(process.argv.slice(1))',
+      'react-native-config',
+      '--json',
+      '--platform',
+      'android'
+    ].toList()
+    ex.autolinkLibrariesFromCommand(command)
+  }
 }
 
-expoAutolinking.useExpoModules()
-rootProject.name = 'HeliumWallet'
-expoAutolinking.useExpoVersionCatalog()
+rootProject.name = 'HelloWorld'
+
+dependencyResolutionManagement {
+  versionCatalogs {
+    reactAndroidLibs {
+      from(files(new File(["node", "--print", "require.resolve('react-native/package.json')"].execute(null, rootDir).text.trim(), "../gradle/libs.versions.toml")))
+    }
+  }
+}
+
+apply from: new File(["node", "--print", "require.resolve('expo/package.json')"].execute(null, rootDir).text.trim(), "../scripts/autolinking.gradle");
+useExpoModules()
+
 include ':app'
-includeBuild(expoAutolinking.reactNativeGradlePlugin)
+includeBuild(new File(["node", "--print", "require.resolve('@react-native/gradle-plugin/package.json', { paths: [require.resolve('react-native/package.json')] })"].execute(null, rootDir).text.trim()).getParentFile())
