--- a/app.json
+++ b/app.json
@@ -1,16 +1,18 @@
 {
   "name": "HeliumWallet",
   "displayName": "Helium Wallet",
-  "scheme": "heliumwallet",
-  "plugins": [
-    "@maplibre/maplibre-react-native",
-    [
-      "react-native-ble-plx",
-      {
-        "isBackgroundEnabled": true,
-        "modes": ["peripheral", "central"],
-        "bluetoothAlwaysPermission": "Allow $(PRODUCT_NAME) to connect to bluetooth devices"
-      }
+  "expo": {
+    "scheme": "heliumwallet",
+    "plugins": [
+      "@maplibre/maplibre-react-native",
+      [
+        "react-native-ble-plx",
+        {
+          "isBackgroundEnabled": true,
+          "modes": ["peripheral", "central"],
+          "bluetoothAlwaysPermission": "Allow $(PRODUCT_NAME) to connect to bluetooth devices"
+        }
+      ]
     ]
-  ]
+  }
 }
