--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "ios-clean": "rm -rf ios/Pods && rm -rf ios/build",
     "pod-install": "bundle install && cd ios && RCT_NEW_ARCH_ENABLED=1 bundle exec pod install --repo-update",
     "clean-start": "yarn start -- --reset-cache",
-    "clean": "react-native-clean-project",
+    "clean-install": "react-native-clean-project",
     "bump-patch": "npx react-native bump-version --skip-semver-for android --skip-code-for all --type patch",
     "bump-minor": "npx react-native bump-version --skip-semver-for android --skip-code-for all --type minor",
     "bump-major": "npx react-native bump-version --skip-semver-for android --skip-code-for all --type major",
@@ -79,7 +79,7 @@
     "@noble/ed25519": "^2.3.0",
     "@noble/hashes": "^1.8.0",
     "@onsol/tldparser": "0.5.3",
-    "@react-native-async-storage/async-storage": "^1.18.1",
+    "@react-native-async-storage/async-storage": "1.18.1",
     "@react-native-community/checkbox": "0.5.17",
     "@react-native-community/clipboard": "1.5.1",
     "@react-native-community/hooks": "2.8.1",
@@ -111,7 +111,7 @@
     "@walletconnect/types": "2.2.1",
     "angry-purple-tiger": "1.0.5",
     "assert": "1.5.0",
-    "axios": "^1.8.2",
+    "axios": "1.8.2",
     "axios-mock-adapter": "1.22.0",
     "base-64": "1.0.0",
     "bcrypt-react-native": "1.1.1",
@@ -132,16 +132,16 @@
     "domain-browser": "1.2.0",
     "ed25519-hd-key": "1.3.0",
     "events": "3.3.0",
-    "expo": "53.0.20",
+    "expo": "52.0.44",
     "expo-asset": "10.0.10",
-    "expo-blur": "~14.1.5",
-    "expo-camera": "~16.1.10",
-    "expo-constants": "~17.1.7",
-    "expo-haptics": "~14.1.4",
-    "expo-linking": "~7.1.7",
-    "expo-local-authentication": "~16.0.5",
-    "expo-modules-core": "~2.5.0",
-    "expo-secure-store": "~14.2.3",
+    "expo-blur": "14.0.3",
+    "expo-camera": "16.0.18",
+    "expo-constants": "17.0.6",
+    "expo-haptics": "13.0.1",
+    "expo-linking": "7.0.5",
+    "expo-local-authentication": "14.0.1",
+    "expo-modules-core": "2.2.3",
+    "expo-secure-store": "13.0.2",
     "expo-splash-screen": "0.27.5",
     "fuse.js": "6.6.2",
     "h3-js": "4.1.0",
@@ -172,7 +172,7 @@
     "react-native-crypto": "2.2.0",
     "react-native-device-info": "8.7.1",
     "react-native-flash-message": "0.2.1",
-    "react-native-gesture-handler": "^2.27.1",
+    "react-native-gesture-handler": "2.24.0",
     "react-native-get-random-values": "1.8.0",
     "react-native-icloudstore": "0.9.0",
     "react-native-jazzicon": "0.1.2",
@@ -186,18 +186,18 @@
     "react-native-network-info": "5.2.1",
     "react-native-onesignal": "5.2.9",
     "react-native-os": "1.2.6",
-    "react-native-pager-view": "^6.8.1",
+    "react-native-pager-view": "6.7.0",
     "react-native-permissions": "5.3.0",
     "react-native-qrcode-svg": "6.1.2",
     "react-native-randombytes": "3.6.1",
-    "react-native-reanimated": "^3.18.0",
-    "react-native-safe-area-context": "^5.5.2",
-    "react-native-screens": "^4.13.0",
+    "react-native-reanimated": "3.17.5",
+    "react-native-safe-area-context": "5.3.0",
+    "react-native-screens": "4.10.0",
     "react-native-share": "7.9.0",
     "react-native-shared-group-preferences": "1.1.24",
     "react-native-simple-toast": "1.1.4",
     "react-native-snap-carousel": "4.0.0-beta.6",
-    "react-native-svg": "^15.12.0",
+    "react-native-svg": "15.11.2",
     "react-native-tab-view": "3.3.4",
     "react-native-tcp": "3.3.2",
     "react-native-test-flight": "1.1.0",
@@ -205,7 +205,7 @@
     "react-native-udp": "2.7.0",
     "react-native-url-polyfill": "2.0.0",
     "react-native-video": "6.12.0",
-    "react-native-webview": "13.13.0",
+    "react-native-webview": "13.13.5",
     "react-redux": "8.0.4",
     "readable-stream": "3.6.0",
     "redux-persist": "6.0.0",
@@ -346,5 +346,5 @@
     "vm": "vm-browserify",
     "zlib": "browserify-zlib"
   },
-  "packageManager": "yarn@4.9.2"
+  "packageManager": "yarn@1.22.21+sha1.1959a18351b811cdeedbd484a8f86c3cc3bbaf72"
 }
