--- a/ios/Podfile
+++ b/ios/Podfile
@@ -27,20 +27,15 @@ end
 target 'HeliumWallet' do
   use_expo_modules!
   pod 'lottie-ios'
-  if ENV['EXPO_USE_COMMUNITY_AUTOLINKING'] == '1'
-    config_command = ['node', '-e', "process.argv=['', '', 'config'];require('@react-native-community/cli').run()"];
-  else
-    config_command = [
-      'npx',
-      'expo-modules-autolinking',
-      'react-native-config',
-      '--json',
-      '--platform',
-      'ios'
-    ]
+  post_integrate do |installer|
+    begin
+      expo_patch_react_imports!(installer)
+    rescue => e
+      Pod::UI.warn e
+    end
   end
 
-  config = use_native_modules!(config_command)
+  config = use_native_modules!
 
   use_react_native!(
     :path => config[:reactNativePath],
