--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.14.6",
   "private": true,
   "scripts": {
-    "postinstall": "patch-package && ./node_modules/.bin/rn-nodeify --hack --install && npx jetify",
+    "postinstall": "patch-package && npx jetify",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
@@ -99,7 +99,7 @@
     "@solana/wallet-adapter-react": "0.15.33",
     "@solana/wallet-standard-features": "1.0.0",
     "@solana/web3.js": "1.91.4",
-    "@tanstack/react-query": "5.45.1",
+    "@tanstack/react-query": "5.84.1",
     "@tradle/react-native-http": "2.0.1",
     "@turf/bbox": "6.5.0",
     "@turf/center": "6.5.0",
@@ -125,7 +125,6 @@
     "compare-versions": "6.1.0",
     "console-browserify": "1.2.0",
     "constants-browserify": "1.0.0",
-    "crypto": "1.0.1",
     "date-fns": "2.29.2",
     "deprecated-react-native-prop-types": "2.3.0",
     "dns.js": "1.0.1",
@@ -169,7 +168,6 @@
     "react-native-ble-plx": "3.4.0",
     "react-native-charts-wrapper": "0.5.10",
     "react-native-config": "1.4.6",
-    "react-native-crypto": "2.2.0",
     "react-native-device-info": "8.7.1",
     "react-native-flash-message": "0.2.1",
     "react-native-gesture-handler": "2.24.0",
@@ -189,6 +187,7 @@
     "react-native-pager-view": "6.7.0",
     "react-native-permissions": "5.3.0",
     "react-native-qrcode-svg": "6.1.2",
+    "react-native-quick-crypto": "^0.7.17",
     "react-native-randombytes": "3.6.1",
     "react-native-reanimated": "3.17.5",
     "react-native-safe-area-context": "5.3.0",
@@ -279,7 +278,6 @@
     "react-test-renderer": "19.0.0",
     "reactotron-react-native": "^5.1.3",
     "reactotron-redux": "^3.1.9",
-    "rn-nodeify": "10.3.0",
     "typescript": "5.0.4"
   },
   "resolutions": {
@@ -293,58 +291,6 @@
     "@helium/voter-stake-registry-sdk": "0.10.33",
     "@helium/modular-governance-hooks": "0.1.5",
     "@helium/onboarding": "^5.0.1"
-  },
-  "react-native": {
-    "zlib": "browserify-zlib",
-    "console": "console-browserify",
-    "constants": "constants-browserify",
-    "crypto": "react-native-crypto",
-    "dns": "dns.js",
-    "net": "react-native-tcp",
-    "domain": "domain-browser",
-    "http": "@tradle/react-native-http",
-    "https": "https-browserify",
-    "path": "path-browserify",
-    "querystring": "querystring-es3",
-    "fs": "react-native-level-fs",
-    "_stream_transform": "readable-stream/transform",
-    "_stream_readable": "readable-stream/readable",
-    "_stream_writable": "readable-stream/writable",
-    "_stream_duplex": "readable-stream/duplex",
-    "_stream_passthrough": "readable-stream/passthrough",
-    "dgram": "react-native-udp",
-    "stream": "stream-browserify",
-    "timers": "timers-browserify",
-    "tty": "tty-browserify",
-    "vm": "vm-browserify",
-    "tls": false,
-    "os": "react-native-os"
-  },
-  "browser": {
-    "_stream_duplex": "readable-stream/duplex",
-    "_stream_passthrough": "readable-stream/passthrough",
-    "_stream_readable": "readable-stream/readable",
-    "_stream_transform": "readable-stream/transform",
-    "_stream_writable": "readable-stream/writable",
-    "console": "console-browserify",
-    "constants": "constants-browserify",
-    "crypto": "react-native-crypto",
-    "dgram": "react-native-udp",
-    "dns": "dns.js",
-    "domain": "domain-browser",
-    "fs": "react-native-level-fs",
-    "http": "@tradle/react-native-http",
-    "https": "https-browserify",
-    "net": "react-native-tcp",
-    "os": "react-native-os",
-    "path": "path-browserify",
-    "querystring": "querystring-es3",
-    "stream": "stream-browserify",
-    "timers": "timers-browserify",
-    "tls": false,
-    "tty": "tty-browserify",
-    "vm": "vm-browserify",
-    "zlib": "browserify-zlib"
   },
   "packageManager": "yarn@4.9.2"
 }
