--- a/package.json
+++ b/package.json
@@ -123,12 +123,8 @@
     "buffer": "6.0.3",
     "camelcase-keys": "7.0.2",
     "compare-versions": "6.1.0",
-    "console-browserify": "1.2.0",
-    "constants-browserify": "1.0.0",
     "date-fns": "2.29.2",
     "deprecated-react-native-prop-types": "2.3.0",
-    "dns.js": "1.0.1",
-    "domain-browser": "1.2.0",
     "ed25519-hd-key": "1.3.0",
     "events": "3.3.0",
     "expo": "52.0.44",
@@ -144,7 +140,6 @@
     "expo-splash-screen": "0.27.5",
     "fuse.js": "6.6.2",
     "h3-js": "4.1.0",
-    "https-browserify": "0.0.1",
     "i18next": "21.9.1",
     "lodash": "4.17.21",
     "long": "5.2.0",
@@ -154,11 +149,9 @@
     "metro-react-native-babel-transformer": "0.77.0",
     "parse5": "6.0.1",
     "patch-package": "8.0.0",
-    "path-browserify": "0.0.0",
     "punycode": "1.4.1",
     "qs": "6.11.0",
     "query-string": "7.1.1",
-    "querystring-es3": "0.2.1",
     "react": "19.0.0",
     "react-async-hook": "4.0.0",
     "react-error-boundary": "4.0.13",
@@ -216,12 +209,9 @@
     "stream-browserify": "1.0.0",
     "string_decoder": "0.10.31",
     "text-encoding-polyfill": "0.6.7",
-    "timers-browserify": "1.4.2",
     "tinycolor2": "1.4.2",
-    "tty-browserify": "0.0.0",
     "url": "0.10.3",
-    "use-debounce": "7.0.1",
-    "vm-browserify": "0.0.4"
+    "use-debounce": "7.0.1"
   },
   "devDependencies": {
     "@babel/core": "7.26.10",
