--- a/package.json
+++ b/package.json
@@ -100,11 +100,7 @@
     "@solana/wallet-standard-features": "1.0.0",
     "@solana/web3.js": "1.91.4",
     "@tanstack/react-query": "5.84.1",
-    "@tradle/react-native-http": "2.0.1",
-    "@turf/bbox": "6.5.0",
-    "@turf/center": "6.5.0",
     "@turf/helpers": "6.5.0",
-    "@types/base-64": "1.0.2",
     "@ungap/structured-clone": "1.3.0",
     "@walletconnect/react-native-compat": "2.2.1",
     "@walletconnect/sign-client": "2.2.1",
@@ -121,10 +117,7 @@
     "browserify-zlib": "0.2.0",
     "bs58": "5.0.0",
     "buffer": "6.0.3",
-    "camelcase-keys": "7.0.2",
-    "compare-versions": "6.1.0",
     "date-fns": "2.29.2",
-    "deprecated-react-native-prop-types": "2.3.0",
     "ed25519-hd-key": "1.3.0",
     "events": "3.3.0",
     "expo": "52.0.44",
@@ -146,12 +139,11 @@
     "lottie-ios": "4.5.1",
     "lottie-react-native": "7.2.2",
     "markdown-it": "13.0.2",
-    "metro-react-native-babel-transformer": "0.77.0",
+    "metro-react-native-babel-transformer": "^0.77.0",
     "parse5": "6.0.1",
     "patch-package": "8.0.0",
-    "punycode": "1.4.1",
-    "qs": "6.11.0",
-    "query-string": "7.1.1",
+    "qs": "^6.14.0",
+    "query-string": "^9.1.1",
     "react": "19.0.0",
     "react-async-hook": "4.0.0",
     "react-error-boundary": "4.0.13",
@@ -199,19 +191,15 @@
     "react-native-video": "6.12.0",
     "react-native-webview": "13.13.5",
     "react-redux": "8.0.4",
-    "readable-stream": "3.6.0",
     "redux-persist": "6.0.0",
     "rn-swipe-button": "1.3.8",
     "rxjs": "7.5.6",
-    "semver": "7.3.8",
     "snakecase-keys": "5.4.2",
-    "stream": "0.0.2",
-    "stream-browserify": "1.0.0",
-    "string_decoder": "0.10.31",
-    "text-encoding-polyfill": "0.6.7",
-    "tinycolor2": "1.4.2",
-    "url": "0.10.3",
-    "use-debounce": "7.0.1"
+    "stream": "^0.0.3",
+    "stream-browserify": "^3.0.0",
+    "text-encoding-polyfill": "^0.6.7",
+    "tinycolor2": "^1.6.0",
+    "use-debounce": "^10.0.4"
   },
   "devDependencies": {
     "@babel/core": "7.26.10",
@@ -225,6 +213,7 @@
     "@react-native/eslint-config": "0.79.5",
     "@react-native/metro-config": "0.79.5",
     "@react-native/typescript-config": "0.79.5",
+    "@types/base-64": "1.0.2",
     "@types/bn.js": "5.1.1",
     "@types/debounce": "1.2.4",
     "@types/i18n-js": "3.8.2",
@@ -245,7 +234,7 @@
     "@typescript-eslint/eslint-plugin": "5.59.2",
     "@typescript-eslint/parser": "5.59.2",
     "babel-jest": "29.7.0",
-    "babel-plugin-module-resolver": "4.1.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "babel-plugin-transform-remove-console": "6.9.4",
     "eslint": "7.32.0",
     "eslint-config-airbnb": "18.2.1",
