--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "@react-native/typescript-config/tsconfig.json",
   "compilerOptions": {
     "target": "esnext",
     "module": "ES2015",
@@ -55,7 +56,7 @@
     "node_modules",
     "babel.config.js",
     "metro.config.js",
-    "jest.config.js"
-  ],
-  "extends": "@react-native/typescript-config/tsconfig.json"
+    "jest.config.js",
+    ".eslintrc.js",
+  ]
 }
