--- a/package.json
+++ b/package.json
@@ -80,8 +80,8 @@
     "@noble/hashes": "^1.8.0",
     "@onsol/tldparser": "0.5.3",
     "@react-native-async-storage/async-storage": "1.18.1",
+    "@react-native-clipboard/clipboard": "^1.16.3",
     "@react-native-community/checkbox": "0.5.17",
-    "@react-native-community/clipboard": "1.5.1",
     "@react-native-community/hooks": "2.8.1",
     "@react-native-community/netinfo": "9.3.7",
     "@react-native-community/slider": "4.5.6",
