--- a/ios/Podfile
+++ b/ios/Podfile
@@ -16,6 +16,7 @@ setup_permissions(['Bluetooth', 'LocationAlways', 'LocationWhenInUse'])
 ENV['RCT_NEW_ARCH_ENABLED'] = "1"
 
 platform :ios, '15.1'
+source 'https://cdn.cocoapods.org/'
 prepare_react_native_project!
 
 linkage = ENV['USE_FRAMEWORKS']
@@ -27,15 +28,20 @@ end
 target 'HeliumWallet' do
   use_expo_modules!
   pod 'lottie-ios'
-  post_integrate do |installer|
-    begin
-      expo_patch_react_imports!(installer)
-    rescue => e
-      Pod::UI.warn e
-    end
+  if ENV['EXPO_USE_COMMUNITY_AUTOLINKING'] == '1'
+    config_command = ['node', '-e', "process.argv=['', '', 'config'];require('@react-native-community/cli').run()"];
+  else
+    config_command = [
+      'npx',
+      'expo-modules-autolinking',
+      'react-native-config',
+      '--json',
+      '--platform',
+      'ios'
+    ]
   end
 
-  config = use_native_modules!
+  config = use_native_modules!(config_command)
 
   use_react_native!(
     :path => config[:reactNativePath],
