--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "clean-start": "yarn start -- --reset-cache",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx && tsc",
     "android-clean": "cd android && ./gradlew clean && cd ..",
     "ios-clean": "rm -rf ios/Pods && rm -rf ios/build",
     "pod-install": "bundle install && cd ios && RCT_NEW_ARCH_ENABLED=1 bundle exec pod install --repo-update",
-    "clean-start": "yarn start -- --reset-cache",
     "clean-install": "react-native-clean-project",
     "bump-patch": "npx react-native bump-version --skip-semver-for android --skip-code-for all --type patch",
     "bump-minor": "npx react-native bump-version --skip-semver-for android --skip-code-for all --type minor",
@@ -107,8 +107,8 @@
     "@walletconnect/types": "2.2.1",
     "angry-purple-tiger": "1.0.5",
     "assert": "1.5.0",
-    "axios": "1.11.0",
-    "axios-mock-adapter": "2.1.0",
+    "axios": "^1.11.0",
+    "axios-mock-adapter": "^2.1.0",
     "base-64": "1.0.0",
     "bcrypt-react-native": "1.1.1",
     "bignumber.js": "9.1.1",
@@ -120,17 +120,16 @@
     "date-fns": "2.29.2",
     "ed25519-hd-key": "1.3.0",
     "events": "3.3.0",
-    "expo": "52.0.44",
-    "expo-asset": "10.0.10",
-    "expo-blur": "14.0.3",
-    "expo-camera": "16.0.18",
-    "expo-constants": "17.0.6",
-    "expo-haptics": "13.0.1",
-    "expo-linking": "7.0.5",
-    "expo-local-authentication": "14.0.1",
-    "expo-modules-core": "2.2.3",
-    "expo-secure-store": "13.0.2",
-    "expo-splash-screen": "0.27.5",
+    "expo": "53.0.20",
+    "expo-asset": "~11.1.7",
+    "expo-blur": "~14.1.5",
+    "expo-camera": "~16.1.10",
+    "expo-constants": "~17.1.7",
+    "expo-haptics": "~14.1.4",
+    "expo-linking": "~7.1.7",
+    "expo-local-authentication": "~16.0.5",
+    "expo-secure-store": "~14.2.3",
+    "expo-splash-screen": "~0.30.1",
     "fuse.js": "6.6.2",
     "h3-js": "4.1.0",
     "i18next": "21.9.1",
