--- a/package.json
+++ b/package.json
@@ -154,7 +154,7 @@
     "react-native-config": "1.4.6",
     "react-native-device-info": "8.7.1",
     "react-native-flash-message": "0.2.1",
-    "react-native-gesture-handler": "2.24.0",
+    "react-native-gesture-handler": "^2.27.1",
     "react-native-get-random-values": "1.8.0",
     "react-native-icloudstore": "0.9.0",
     "react-native-jazzicon": "0.1.2",
@@ -174,13 +174,13 @@
     "react-native-quick-crypto": "^0.7.17",
     "react-native-randombytes": "3.6.1",
     "react-native-reanimated": "3.17.5",
-    "react-native-safe-area-context": "5.3.0",
-    "react-native-screens": "4.10.0",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-screens": "^4.13.1",
     "react-native-share": "7.9.0",
     "react-native-shared-group-preferences": "1.1.24",
     "react-native-simple-toast": "1.1.4",
     "react-native-snap-carousel": "4.0.0-beta.6",
-    "react-native-svg": "15.11.2",
+    "react-native-svg": "^15.12.1",
     "react-native-tab-view": "3.3.4",
     "react-native-test-flight": "1.1.0",
     "react-native-text-ticker": "1.14.0",
