--- a/package.json
+++ b/package.json
@@ -189,7 +189,7 @@
     "react-native-webview": "13.13.5",
     "react-redux": "8.0.4",
     "redux-persist": "6.0.0",
-    "rn-swipe-button": "1.3.8",
+    "rn-swipe-button": "^3.0.1",
     "rxjs": "7.5.6",
     "snakecase-keys": "5.4.2",
     "stream": "^0.0.3",
