--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -114,6 +114,10 @@ android {
         versionCode 1
         versionName getAppVersion()
     }
+
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
     signingConfigs {
         debug {
             storeFile file('debug.keystore')
