Feat/react native upgrade (#956)
* Update stuff according to upgrade helpers

* upgrade yarn

* wip

* tsc issues

* rever expo changes

* Fixes

* upgrade axios

* revert podfile

* tweaks

* yarn

* working in ios

* cleanup

* workin in ios

* fix derivation logic

* podfile fix

* remove community/clipboard

* expo upgrade

* patch h3

* android wip

* running in both sims

* ui issues

* fix crasher when selecting sub accounts

* version bump

* fix default delegation subdao logic

* upgrade rn-swipe-button

* update error messages

* fix logic around insufficient sol

* better fallback logic on the calc

* selecting proxies from dropdown is better

* fix scrolling with keyboard

* fix selecting proxy from screan

* overhaul text scaling

* fix android issues

* fix android scroll

* remove unused

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "helium-wallet",
-  "version": "2.14.6",
+  "version": "2.14.7",
   "private": true,
   "scripts": {
-    "postinstall": "patch-package && ./node_modules/.bin/rn-nodeify --hack --install && npx jetify",
+    "postinstall": "patch-package",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
@@ -80,8 +80,8 @@
     "@noble/hashes": "^1.8.0",
     "@onsol/tldparser": "0.5.3",
     "@react-native-async-storage/async-storage": "1.18.1",
+    "@react-native-clipboard/clipboard": "^1.16.3",
     "@react-native-community/checkbox": "0.5.17",
-    "@react-native-community/clipboard": "1.5.1",
     "@react-native-community/hooks": "2.8.1",
     "@react-native-community/netinfo": "9.3.7",
     "@react-native-community/slider": "4.5.6",
@@ -99,80 +99,62 @@
     "@solana/wallet-adapter-react": "0.15.33",
     "@solana/wallet-standard-features": "1.0.0",
     "@solana/web3.js": "1.91.4",
-    "@tanstack/react-query": "5.45.1",
-    "@tradle/react-native-http": "2.0.1",
-    "@turf/bbox": "6.5.0",
-    "@turf/center": "6.5.0",
+    "@tanstack/react-query": "5.84.1",
     "@turf/helpers": "6.5.0",
-    "@types/base-64": "1.0.2",
     "@ungap/structured-clone": "1.3.0",
     "@walletconnect/react-native-compat": "2.2.1",
     "@walletconnect/sign-client": "2.2.1",
     "@walletconnect/types": "2.2.1",
     "angry-purple-tiger": "1.0.5",
     "assert": "1.5.0",
-    "axios": "1.8.2",
-    "axios-mock-adapter": "1.22.0",
+    "axios": "^1.11.0",
+    "axios-mock-adapter": "^2.1.0",
     "base-64": "1.0.0",
     "bcrypt-react-native": "1.1.1",
     "bignumber.js": "9.1.1",
     "bip39": "3.1.0",
     "bn.js": "5.2.1",
-    "browserify-zlib": "0.1.4",
+    "browserify-zlib": "0.2.0",
     "bs58": "5.0.0",
     "buffer": "6.0.3",
-    "camelcase-keys": "7.0.2",
-    "compare-versions": "6.1.0",
-    "console-browserify": "1.2.0",
-    "constants-browserify": "1.0.0",
-    "crypto": "1.0.1",
     "date-fns": "2.29.2",
-    "deprecated-react-native-prop-types": "2.3.0",
-    "dns.js": "1.0.1",
-    "domain-browser": "1.2.0",
     "ed25519-hd-key": "1.3.0",
     "events": "3.3.0",
-    "expo": "52.0.44",
-    "expo-asset": "10.0.10",
-    "expo-blur": "14.0.3",
-    "expo-camera": "16.0.18",
-    "expo-constants": "17.0.6",
-    "expo-haptics": "13.0.1",
-    "expo-linking": "7.0.5",
-    "expo-local-authentication": "14.0.1",
-    "expo-modules-core": "2.2.3",
-    "expo-secure-store": "13.0.2",
-    "expo-splash-screen": "0.27.5",
+    "expo": "53.0.20",
+    "expo-asset": "~11.1.7",
+    "expo-blur": "~14.1.5",
+    "expo-camera": "~16.1.10",
+    "expo-constants": "~17.1.7",
+    "expo-haptics": "~14.1.4",
+    "expo-linking": "~7.1.7",
+    "expo-local-authentication": "~16.0.5",
+    "expo-secure-store": "~14.2.3",
+    "expo-splash-screen": "~0.30.1",
     "fuse.js": "6.6.2",
     "h3-js": "4.1.0",
-    "https-browserify": "0.0.1",
     "i18next": "21.9.1",
     "lodash": "4.17.21",
     "long": "5.2.0",
     "lottie-ios": "4.5.1",
-    "lottie-react-native": "7.2.2",
+    "lottie-react-native": "7.2.4",
     "markdown-it": "13.0.2",
-    "metro-react-native-babel-transformer": "0.77.0",
+    "metro-react-native-babel-transformer": "^0.77.0",
     "parse5": "6.0.1",
     "patch-package": "8.0.0",
-    "path-browserify": "0.0.0",
-    "punycode": "1.4.1",
-    "qs": "6.11.0",
-    "query-string": "7.1.1",
-    "querystring-es3": "0.2.1",
-    "react": "18.3.1",
+    "qs": "^6.14.0",
+    "query-string": "^9.1.1",
+    "react": "19.0.0",
     "react-async-hook": "4.0.0",
     "react-error-boundary": "4.0.13",
     "react-i18next": "11.18.4",
-    "react-native": "0.77.2",
+    "react-native": "0.79.5",
     "react-native-appstate-hook": "1.0.6",
     "react-native-ble-plx": "3.4.0",
     "react-native-charts-wrapper": "0.5.10",
     "react-native-config": "1.4.6",
-    "react-native-crypto": "2.2.0",
     "react-native-device-info": "8.7.1",
     "react-native-flash-message": "0.2.1",
-    "react-native-gesture-handler": "2.24.0",
+    "react-native-gesture-handler": "^2.27.1",
     "react-native-get-random-values": "1.8.0",
     "react-native-icloudstore": "0.9.0",
     "react-native-jazzicon": "0.1.2",
@@ -186,56 +168,49 @@
     "react-native-network-info": "5.2.1",
     "react-native-onesignal": "5.2.9",
     "react-native-os": "1.2.6",
-    "react-native-pager-view": "6.7.0",
+    "react-native-pager-view": "6.8.1",
     "react-native-permissions": "5.3.0",
     "react-native-qrcode-svg": "6.1.2",
+    "react-native-quick-crypto": "^0.7.17",
     "react-native-randombytes": "3.6.1",
     "react-native-reanimated": "3.17.5",
-    "react-native-safe-area-context": "5.3.0",
-    "react-native-screens": "4.10.0",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-screens": "^4.13.1",
     "react-native-share": "7.9.0",
     "react-native-shared-group-preferences": "1.1.24",
     "react-native-simple-toast": "1.1.4",
     "react-native-snap-carousel": "4.0.0-beta.6",
-    "react-native-svg": "15.11.2",
+    "react-native-svg": "^15.12.1",
     "react-native-tab-view": "3.3.4",
-    "react-native-tcp": "3.3.2",
     "react-native-test-flight": "1.1.0",
     "react-native-text-ticker": "1.14.0",
-    "react-native-udp": "2.7.0",
     "react-native-url-polyfill": "2.0.0",
     "react-native-video": "6.12.0",
     "react-native-webview": "13.13.5",
     "react-redux": "8.0.4",
-    "readable-stream": "3.6.0",
     "redux-persist": "6.0.0",
-    "rn-swipe-button": "1.3.8",
+    "rn-swipe-button": "^3.0.1",
     "rxjs": "7.5.6",
-    "semver": "7.3.8",
     "snakecase-keys": "5.4.2",
-    "stream": "0.0.2",
-    "stream-browserify": "1.0.0",
-    "string_decoder": "0.10.31",
-    "text-encoding-polyfill": "0.6.7",
-    "timers-browserify": "1.4.2",
-    "tinycolor2": "1.4.2",
-    "tty-browserify": "0.0.0",
-    "url": "0.10.3",
-    "use-debounce": "7.0.1",
-    "vm-browserify": "0.0.4"
+    "stream": "^0.0.3",
+    "stream-browserify": "^3.0.0",
+    "text-encoding-polyfill": "^0.6.7",
+    "tinycolor2": "^1.6.0",
+    "use-debounce": "^10.0.4"
   },
   "devDependencies": {
     "@babel/core": "7.26.10",
     "@babel/preset-env": "7.26.9",
     "@babel/runtime": "7.26.10",
     "@ledgerhq/hw-transport-mocker": "6.29.8",
-    "@react-native-community/cli": "15.0.1",
-    "@react-native-community/cli-platform-android": "15.0.1",
-    "@react-native-community/cli-platform-ios": "15.0.1",
-    "@react-native/babel-preset": "0.77.2",
-    "@react-native/eslint-config": "0.77.2",
-    "@react-native/metro-config": "0.77.2",
-    "@react-native/typescript-config": "0.77.2",
+    "@react-native-community/cli": "18.0.0",
+    "@react-native-community/cli-platform-android": "18.0.0",
+    "@react-native-community/cli-platform-ios": "18.0.0",
+    "@react-native/babel-preset": "0.79.5",
+    "@react-native/eslint-config": "0.79.5",
+    "@react-native/metro-config": "0.79.5",
+    "@react-native/typescript-config": "0.79.5",
+    "@types/base-64": "1.0.2",
     "@types/bn.js": "5.1.1",
     "@types/debounce": "1.2.4",
     "@types/i18n-js": "3.8.2",
@@ -245,19 +220,18 @@
     "@types/markdown-it": "13.0.5",
     "@types/parse5": "5.0.3",
     "@types/qs": "6.9.7",
-    "@types/react": "18.3.3",
-    "@types/react-native": "0.70.6",
+    "@types/react": "^19.0.0",
     "@types/react-native-charts-wrapper": "0.5.2",
     "@types/react-native-shared-group-preferences": "1.1.1",
     "@types/react-native-snap-carousel": "3.8.5",
     "@types/react-native-video": "5.0.14",
-    "@types/react-test-renderer": "19.1.0",
+    "@types/react-test-renderer": "^19.0.0",
     "@types/semver": "7.3.12",
     "@types/tinycolor2": "1.4.3",
     "@typescript-eslint/eslint-plugin": "5.59.2",
     "@typescript-eslint/parser": "5.59.2",
     "babel-jest": "29.7.0",
-    "babel-plugin-module-resolver": "4.1.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "babel-plugin-transform-remove-console": "6.9.4",
     "eslint": "7.32.0",
     "eslint-config-airbnb": "18.2.1",
@@ -277,15 +251,14 @@
     "react-native-cli-bump-version": "1.5.0",
     "react-native-codegen": "0.0.7",
     "react-native-svg-transformer": "0.14.3",
-    "react-test-renderer": "18.3.1",
-    "reactotron-react-native": "5.0.3",
-    "reactotron-redux": "3.1.3",
-    "rn-nodeify": "10.3.0",
+    "react-test-renderer": "19.0.0",
+    "reactotron-react-native": "^5.1.3",
+    "reactotron-redux": "^3.1.9",
     "typescript": "5.0.4"
   },
   "resolutions": {
-    "@types/react": "18",
-    "react": "18.3.1",
+    "@types/react": "^19.0.0",
+    "react": "19.0.0",
     "@solana/wallet-adapter-react": "0.15.33",
     "@helium/account-fetch-cache": "0.10.33",
     "@helium/account-fetch-cache-hooks": "0.10.33",
@@ -295,57 +268,5 @@
     "@helium/modular-governance-hooks": "0.1.5",
     "@helium/onboarding": "^5.0.1"
   },
-  "react-native": {
-    "zlib": "browserify-zlib",
-    "console": "console-browserify",
-    "constants": "constants-browserify",
-    "crypto": "react-native-crypto",
-    "dns": "dns.js",
-    "net": "react-native-tcp",
-    "domain": "domain-browser",
-    "http": "@tradle/react-native-http",
-    "https": "https-browserify",
-    "path": "path-browserify",
-    "querystring": "querystring-es3",
-    "fs": "react-native-level-fs",
-    "_stream_transform": "readable-stream/transform",
-    "_stream_readable": "readable-stream/readable",
-    "_stream_writable": "readable-stream/writable",
-    "_stream_duplex": "readable-stream/duplex",
-    "_stream_passthrough": "readable-stream/passthrough",
-    "dgram": "react-native-udp",
-    "stream": "stream-browserify",
-    "timers": "timers-browserify",
-    "tty": "tty-browserify",
-    "vm": "vm-browserify",
-    "tls": false,
-    "os": "react-native-os"
-  },
-  "browser": {
-    "_stream_duplex": "readable-stream/duplex",
-    "_stream_passthrough": "readable-stream/passthrough",
-    "_stream_readable": "readable-stream/readable",
-    "_stream_transform": "readable-stream/transform",
-    "_stream_writable": "readable-stream/writable",
-    "console": "console-browserify",
-    "constants": "constants-browserify",
-    "crypto": "react-native-crypto",
-    "dgram": "react-native-udp",
-    "dns": "dns.js",
-    "domain": "domain-browser",
-    "fs": "react-native-level-fs",
-    "http": "@tradle/react-native-http",
-    "https": "https-browserify",
-    "net": "react-native-tcp",
-    "os": "react-native-os",
-    "path": "path-browserify",
-    "querystring": "querystring-es3",
-    "stream": "stream-browserify",
-    "timers": "timers-browserify",
-    "tls": false,
-    "tty": "tty-browserify",
-    "vm": "vm-browserify",
-    "zlib": "browserify-zlib"
-  },
-  "packageManager": "yarn@1.22.21+sha1.1959a18351b811cdeedbd484a8f86c3cc3bbaf72"
+  "packageManager": "yarn@4.9.2"
 }
