--- a/ios/HeliumWallet/Info.plist
+++ b/ios/HeliumWallet/Info.plist
@@ -60,9 +60,9 @@
 		</dict>
 	</dict>
 	<key>NSBluetoothAlwaysUsageDescription</key>
-	<string>Allow Helium to connect and manage your devices</string>
+	<string>This app uses Bluetooth to connect to Helium hotspots and other compatible devices for management.</string>
 	<key>NSBluetoothPeripheralUsageDescription</key>
-	<string>Allow Helium to connect and manage your devices</string>
+	<string>This app uses Bluetooth to connect to Helium hotspots and other compatible devices for management.</string>
 	<key>NSCameraUsageDescription</key>
 	<string>Allow Helium to use the camera to scan QR codes</string>
 	<key>NSFaceIDUsageDescription</key>
