enable immutable installs and checksum behavior

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -7,3 +7,7 @@ nodeLinker: node-modules
 enableScripts: true
 
 yarnPath: .yarn/releases/yarn-4.9.2.cjs
+
+enableImmutableInstalls: true
+
+checksumBehavior: true
