--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -8,6 +8,6 @@ enableScripts: true
 
 yarnPath: .yarn/releases/yarn-4.9.2.cjs
 
-enableImmutableInstalls: true
+enableImmutableInstalls: false
 
 checksumBehavior: throw
