--- a/package.json
+++ b/package.json
@@ -75,13 +75,13 @@
     "@metaplex-foundation/mpl-bubblegum": "0.6.0",
     "@metaplex-foundation/mpl-token-metadata": "2.10.0",
     "@ngraveio/bc-ur": "1.1.13",
-    "@noble/ciphers": "^1.3.0",
-    "@noble/ed25519": "^2.3.0",
-    "@noble/hashes": "^1.8.0",
+    "@noble/ciphers": "1.3.0",
+    "@noble/ed25519": "2.3.0",
+    "@noble/hashes": "1.8.0",
     "@onsol/tldparser": "0.5.3",
     "@react-native-async-storage/async-storage": "1.18.1",
-    "@react-native-clipboard/clipboard": "^1.16.3",
-    "@react-native-community/checkbox": "^0.5.20",
+    "@react-native-clipboard/clipboard": "1.16.3",
+    "@react-native-community/checkbox": "0.5.20",
     "@react-native-community/hooks": "2.8.1",
     "@react-native-community/netinfo": "9.3.7",
     "@react-native-community/slider": "4.5.6",
