Finish using my helium tx api

--- a/.env.sample
+++ b/.env.sample
@@ -12,5 +12,6 @@ MIGRATION_SERVER_URL=
 TOKENS_TO_RENT_SERVICE_URL=
 TOKENS_TO_RENT_SERVICE_DEVNET_URL=
 JUP_SWAP_API=
+HELIUM_TRANSACTION_API=
 PMTILES_URL=
 VIEW_AS=
